--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,10 @@
     "module": "es2015",                                  /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
-    // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
-    // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
+     "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
+     "paths": {
+       "@support/*": ["cypress/support/*"]
+     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
@@ -109,6 +111,6 @@
 
   },
   // include and exclude files, include and exclude are supposed to be siblings of compilerOptions, not children
-  "include": ["**/*.ts","src","tests","cypress"],
-  "exclude": ["node_modules"]
+  "include": ["**/*.ts","src","tests","cypress","src/**/*", "cypress/**/*"],
+  "exclude": ["node_modules","dist"]
 }
